# rendition

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  skills-lock.json  sonar-project.properties
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  ci.yml
aidlc-docs/: .markdownlint.json  aidlc-state.md  audit.md
aidlc-docs/construction/config/code/: code-summary.md
aidlc-docs/construction/config/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/plans/: config-code-generation-plan.md  s3-storage-code-generation-plan.md  s3-storage-functional-design-plan.md  s3-storage-infrastructure-design-plan.md  s3-storage-nfr-design-plan.md  s3-storage-nfr-requirements-plan.md  transform-cache-code-generation-plan.md
aidlc-docs/construction/s3-storage/code/: code-summary.md
aidlc-docs/construction/s3-storage/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/s3-storage/infrastructure-design/: deployment-architecture.md  infrastructure-design.md
aidlc-docs/construction/s3-storage/nfr-design/: logical-components.md  nfr-design-patterns.md
aidlc-docs/construction/s3-storage/nfr-requirements/: nfr-requirements.md  tech-stack-decisions.md
aidlc-docs/construction/transform-cache/code/: code-summary.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  unit-of-work-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  reverse-engineering-timestamp.md  technology-stack.md
docs/: architecture.md
docs/adr/: 0001-rust-as-runtime.md  0002-axum-http-framework.md  0003-libvips-image-processing.md  0004-pluggable-storage-backends.md  0005-scene7-url-compatibility.md  0006-library-binary-crate-split.md  0007-oidc-sso-admin-authentication.md  0008-http-451-for-embargoed-assets.md  0009-lru-transform-cache.md  0010-embargo-store-backend.md  0011-automatic-format-negotiation.md  0012-surrogate-key-cdn-cache-invalidation.md  0013-admin-api-dual-port-listener.md  0014-envy-configuration-parsing.md  0015-tower-governor-rate-limiting.md  0016-jsonwebtoken-oidc-validation.md  0017-prometheus-metrics-crate.md  0018-http-206-custom-range-parsing.md  0019-s3-circuit-breaker.md  0020-nested-config-groups.md  README.md
src/: cache.rs  config.rs  lib.rs  main.rs  metrics.rs
src/api/: mod.rs
src/storage/: circuit_breaker.rs  local.rs  mod.rs  s3.rs
src/transform/: mod.rs
tests/: api_integration.rs  circuit_breaker_proptest.rs  config_test.rs  e2e.rs  s3_integration.rs
